[package]
name = "mock_api_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.14"
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread"] }
serde = {version = "1.0.152", features = ["derive"]}
serde_json = "1.0.93"
warp = "0.3"